--- a/.gitlab.ci.yml
+++ b/.gitlab.ci.yml
@@ -1,20 +1,27 @@
-stages:
-  - build
-  - test
-  - deploy
+name: Shell Scripts Unit Testing
 
-build_job:
-  stage: build
-  script:
-    - echo "Compiling the code..."
+on: [push]
 
-test_job:
-  stage: test
-  script:
-    - echo "Running tests..."
-    - pytest
-
-deploy_job:
-  stage: deploy
-  script:
-    - echo "Deploying to server..."
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Github Action gen-sh-unittest
+      id: action-gen-sh-unittest
+      uses: vargiuscuola/gen-sh-unittest@master
+    - name: gensh-unittest result
+      run: echo "The result of gensh-unittest Action was ${{ steps.action-gen-sh-unittest.outputs.result }}"
+    - name: Commit files
+      run: |
+        echo ${{ github.ref }}
+        git add .
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -m "CI: Automated build push" -a | exit 0
+    - name: Push changes
+      if: github.ref == 'refs/heads/master'
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
