--- a/.github/workflows/shell_unit_test.yml
+++ b/.github/workflows/shell_unit_test.yml
@@ -14,7 +14,7 @@ jobs:
     - name: gensh-unittest result
       run: echo "The result of gensh-unittest Action was ${{ steps.action-gen-sh-unittest.outputs.result }}"
     - name: Run Shell Script Tests
-      run: bash test_combined_gpg_management.sh
+      run: bash combined_gpg_management.sh
     - name: Commit files
       run: |
         echo ${{ github.ref }}
