--- a/.github/workflows/shellspec.yml
+++ b/.github/workflows/shellspec.yml
@@ -1,39 +1,33 @@
-name: Coverage
+name: Release
 
-on: [push]
-
-env:
-  FORCE_COLOR: 1
+on:
+  push:
+    tags:
+      - '[0-9]*'
 
 jobs:
-  ubuntu-focal:
-    runs-on: ubuntu-20.04
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Install packages
-        run: sudo apt-get install -y bash kcov
-      - name: Install cc-test-reporter
-        env:
-          CC_TEST_REPORTER_URL: https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
-        run: |
-          curl -sSL "$CC_TEST_REPORTER_URL" > ./cc-test-reporter
-          chmod +x ./cc-test-reporter
-          ./cc-test-reporter before-build
-      - name: Run shellspec and upload coverage (Coveralls)
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: |
-          sudo ./shellspec --task fixture:stat:prepare
-          ./shellspec --shell bash --kcov --kcov-options "--coveralls-id=${COVERALLS_REPO_TOKEN}"
-      - name: Upload coverage (Codecov)
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        run: |
-          bash <(curl -s https://codecov.io/bash) -s coverage
-      - name: Upload coverage (Code Climate)
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        run: |
-          ./cc-test-reporter format-coverage coverage/cobertura.xml -t cobertura
-          ./cc-test-reporter upload-coverage
+    - uses: actions/checkout@v2
+    - name: Make dist archive
+      run: make dist
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: ${{ github.ref }}
+        draft: false
+        prerelease: ${{ contains(github.ref, '-') }}
+    - name: Upload release asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: shellspec-dist.tar.gz
+        asset_name: shellspec-dist.tar.gz
+        asset_content_type: application/gzip
